apps/authentik/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: public-gateway
      namespace: infrastructure
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - authentik.manickamx2.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
          kind: Service
          group: ''
          weight: 1
